Float bug on Firefox and IE on Resume Page

--- a/app/assets/stylesheets/galleries.css.scss
+++ b/app/assets/stylesheets/galleries.css.scss
@@ -47,6 +47,7 @@
     text-align: left;
     padding-left: 20px;
     hr {   
+      clear: both;
       font-size: 0px;
       width: 250px;
       border-bottom: 1px dashed darken($body_background, 20%);
